# SPP

./: .gitignore  CMakeLists.txt  GenerateProjects.bat  GenerateProjectsMac.sh  LICENSE  README.md  Update3rdPartyOnly.bat  UpdatePrereqs.bat  UpdatePrereqs.sh  python_requirements.txt
ApplicationThroughputWPF/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
ApplicationThroughputWPF/Properties/: Settings.Designer.cs  Settings.settings
ApplicationThroughputWPF/images/: buttonstate.psd
RemoteControllerWPF/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
RemoteControllerWPF/Properties/: AssemblyInfo.cs  Settings.Designer.cs
SPPAnimation/: CMakeLists.txt  SPPAnimation.cpp  SPPAnimation.h
SPPCEF/: CMakeLists.txt  SPPCEFUI.cpp  SPPCEFUI.h  SPPCEF_win.cpp
SPPCEF/cefclient/: CMakeLists.txt  JSCallbackInterface.cpp  JSCallbackInterface.h  cefclient_win.cc
SPPCapture/: CMakeLists.txt  SPPCapture.cpp  SPPCapture.h
SPPCore/: CMakeLists.txt  CRTPLinkedList.h  SPPArray.cpp  SPPArray.h  SPPArrayResource.h  SPPBase64.cpp  SPPBase64.h  SPPBitSetArray.cpp  SPPBitSetArray.h  SPPCompression.cpp  SPPCompression.h  SPPConsole.cpp  SPPConsole.h  SPPCore.cpp  SPPCore.h  SPPDLMalloc.c  SPPDLMalloc.h  SPPFileSystem.cpp  SPPFileSystem.h  SPPGUID.cpp  SPPGUID.h  SPPHandledTimers.cpp  SPPHandledTimers.h  SPPJsonUtils.cpp  SPPJsonUtils.h  SPPLinuxCore.cpp  SPPLogging.cpp  SPPLogging.h  SPPMacOSCore.cpp  SPPMemory.cpp  SPPMemory.h  SPPNumberedString.cpp  SPPNumberedString.h  SPPPlatformCore.h  SPPPooledChunkBuffer.cpp  SPPPooledChunkBuffer.h  SPPProfiler.cpp  SPPProfiler.h  SPPReferenceCounter.h  SPPSTLAllocator.h  (+18 more)
SPPCoroutines/: CMakeLists.txt  SPPCoroutines.cpp  SPPCoroutines.h
SPPCrypto/: CMakeLists.txt  SPPCrypto.cpp  SPPCrypto.h
SPPDX12/: CMakeLists.txt  DX12Buffers.cpp  DX12Buffers.h  DX12Device.cpp  DX12Device.cpp.bak  DX12Device.h  DX12RenderScene.cpp  DX12RenderScene.h  DX12RenderableMesh.cpp  DX12RenderableSDF.cpp  DX12RenderableSDF.h  DX12Shaders.cpp  DX12Shaders.h  DX12Textures.cpp  DX12Textures.h  DX12Utils.cpp  DX12Utils.h
SPPDX12/AMD/: D3D12MemAlloc.cpp  D3D12MemAlloc.h
SPPDX12/XTK12/: DDS.h
SPPDatabase/: CMakeLists.txt  SPPDatabase.cpp  SPPDatabase.h
SPPEngine/: CMakeLists.txt  SPPApplication.h  SPPAssetCache.cpp  SPPAssetCache.h  SPPCamera.cpp  SPPCamera.h  SPPEngine.cpp  SPPEngine.h  SPPMath.cpp  SPPMath.h  SPPOctree.cpp  SPPOctree.h  SPPPythonInterface.cpp  SPPPythonInterface.h
SPPEngine/Win32/: Win32Application.cpp  sppappbasicresource.h  sppbasicresource.rc
SPPGameEngine/: CMakeLists.txt  SPPGameEngine.cpp  SPPGameEngine.h  SPPJsonEnvironmentImporter.cpp  SPPJsonEnvironmentImporter.h
SPPGraphics/: CMakeLists.txt  SPPAssetImporterFile.cpp  SPPAssetImporterFile.h  SPPBlenderFile.cpp  SPPBlenderFile.h  SPPGPUResources.cpp  SPPGPUResources.h  SPPGraphics.cpp  SPPGraphics.h  SPPGraphics.vcxproj  SPPGraphics.vcxproj.filters  SPPMesh.cpp  SPPMesh.h  SPPMeshSimplifying.cpp  SPPMeshSimplifying.h  SPPMeshlets.cpp  SPPMeshlets.h  SPPSceneGraph.h  SPPSceneRendering.cpp  SPPSceneRendering.h  SPPSkinnedMesh.cpp  SPPSkinnedMesh.h  SPPTerrain.cpp  SPPTerrain.h  SPPTextures.cpp  SPPTextures.h
SPPGraphics/DX12/: DX12Buffers.cpp  DX12Buffers.h  DX12Device.cpp  DX12Device.cpp.bak  DX12Device.h  DX12Shaders.cpp  DX12Shaders.h  DX12Textures.cpp  DX12Textures.h  DX12Utils.cpp  DX12Utils.h
SPPGraphicsO/: CMakeLists.txt  SPPGraphicsO.cpp  SPPGraphicsO.h  SPPJsonSceneImporter.cpp  SPPJsonSceneImporter.h
SPPMath/: CMakeLists.txt  SPPCamera.cpp  SPPCamera.h  SPPMath.cpp  SPPMath.h  SPPOctree.cpp  SPPOctree.h  SPPPrimitiveShapes.cpp  SPPPrimitiveShapes.h  SPPSparseVirtualizedVoxelOctree.cpp  SPPSparseVirtualizedVoxelOctree.h
SPPMesh/: CMakeLists.txt  SPPAssetImporterFile.cpp  SPPAssetImporterFile.h  SPPBlenderFile.cpp  SPPBlenderFile.h  SPPMesh.cpp  SPPMesh.h  SPPMeshSimplifying.cpp  SPPMeshSimplifying.h  SPPMeshlets.cpp  SPPMeshlets.h  SPPSkinnedMesh.cpp  SPPSkinnedMesh.h
SPPNetworking/: CMakeLists.txt  SPPHTTP.cpp  SPPNatTraversal.cpp  SPPNatTraversal.h  SPPNetworkConnection.cpp  SPPNetworkConnection.h  SPPNetworkMessenger.cpp  SPPNetworkMessenger.h  SPPNetworking.h  SPPSockets.cpp  SPPSockets.h  SPPWebSockets.cpp  SPPWebSockets.h
SPPObject/: CMakeLists.txt  ObjectGenerator.cpp  SPPField.cpp  SPPField.h  SPPFunction.cpp  SPPGarbageCollection.cpp  SPPGarbageCollection.h  SPPObject.cpp  SPPObject.h  SPPObjectJSON.cpp  SPPObjectJSON.h  SPPStruct.cpp  SPPStruct.h
SPPOpenGL/: CMakeLists.txt  OpenGLBuffers.cpp  OpenGLBuffers.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLShaders.cpp  OpenGLShaders.h  OpenGLTextures.cpp  OpenGLTextures.h  OpenGLUtils.cpp  OpenGLUtils.h
SPPPhysX/: CMakeLists.txt  SPPPhysX.cpp  SPPPhysX.h  SPPPhysXSVVO.cpp  SPPPhysXSVVO.h
SPPPython/: CMakeLists.txt  SPPPython.cpp  SPPPython.h
SPPReflection/: CMakeLists.txt  SPPReflection.cpp  SPPReflection.h
SPPSDF/: CMakeLists.txt  SPPSDF.cpp  SPPSDF.h
SPPSDFO/: CMakeLists.txt  SPPLoadMagicaCSG.cpp  SPPLoadMagicaCSG.h  SPPSDFO.cpp  SPPSDFO.h
SPPScene/: CMakeLists.txt  SPPScene.cpp  SPPScene.h
SPPSceneO/: CMakeLists.txt  SPPSceneO.cpp  SPPSceneO.h
SPPVideo/: CMakeLists.txt  SPPVideo.cpp  SPPVideo.h
SPPVoxel/: CMakeLists.txt  SPPVoxel.cpp  SPPVoxel.h
SPPVulkan/: CMakeLists.txt  SPPVulkan.cpp  SPPVulkan.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDebugDrawing.cpp  VulkanDebugDrawing.h  VulkanDeferredDrawer.cpp  VulkanDeferredDrawer.h  VulkanDeferredLighting.cpp  VulkanDeferredLighting.h  VulkanDepthDrawer.cpp  VulkanDepthDrawer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanRenderScene.cpp  VulkanRenderScene.h  VulkanRenderableMesh.cpp  VulkanRenderableMesh.h  VulkanRenderableSDF.cpp  VulkanRenderableSVVO.cpp  VulkanRenderableSVVO.h  VulkanResources.cpp  VulkanResources.h  VulkanShaders.cpp  VulkanShaders.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp
(+327 files in other folders)
